--- a/index.html
+++ b/index.html
@@ -3,43 +3,70 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus World - Upgraded Smart Platform</title>
+  <title>AgriNexus World - Fully Responsive Portal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      margin: 0; font-family: 'Segoe UI', sans-serif;
-      background-color: var(--bg); color: var(--text);
-      transition: background-color 0.3s, color 0.3s;
-    }
     :root {
-      --bg: #ffffff;
+      --bg: #fff;
       --text: #111;
       --card-bg: #f5f5f5;
     }
-    [data-theme='dark'] {
+    [data-theme="dark"] {
       --bg: #121212;
       --text: #eee;
       --card-bg: #1e1e1e;
     }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      transition: background 0.3s, color 0.3s;
+    }
     header {
-      background: #007c4d; color: white; padding: 12px 20px;
-      position: sticky; top: 0; z-index: 10;
-      display: flex; justify-content: space-between; align-items: center;
+      background: #007c4d;
+      color: white;
+      padding: 1em;
+      position: sticky;
+      top: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
     }
     nav a {
-      margin: 0 10px; color: white; text-decoration: none;
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .toggle {
+      padding: 5px 12px;
+      background: white;
+      color: #007c4d;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
     }
     .cards {
-      display: flex; flex-wrap: wrap; gap: 20px; padding: 30px;
-      justify-content: center;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 2em;
     }
     .card {
-      background: var(--card-bg); padding: 20px; border-radius: 10px;
-      width: 280px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      background: var(--card-bg);
+      border-radius: 10px;
+      padding: 1em;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     .card h3 { margin-top: 0; }
-    .toggle {
-      background: white; border: none; padding: 6px 12px; border-radius: 5px;
-      cursor: pointer; font-weight: bold; color: #007c4d;
+    .card a {
+      display: inline-block;
+      margin-top: 10px;
+      text-decoration: none;
+      color: #007c4d;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -52,39 +79,40 @@
         <a href="report_dynamic.html">Report</a>
         <a href="report_ai_email.html">AI Email</a>
         <a href="report_admin_dashboard.html">Admin</a>
+        <a href="global_portal.html">Global</a>
       </nav>
-      <button class="toggle" onclick="toggleTheme()">🌓</button>
     </div>
+    <button class="toggle" onclick="toggleTheme()">🌓</button>
   </header>
 
   <section class="cards">
     <div class="card">
       <h3>📄 Report Generator</h3>
-      <p>Create agriculture reports by region and trend.</p>
-      <a href="report_dynamic.html">Use Report Tool →</a>
+      <p>Generate PDF-based agriculture trend reports by region.</p>
+      <a href="report_dynamic.html">Generate Report →</a>
     </div>
     <div class="card">
-      <h3>🧠 AI Summary + Email</h3>
-      <p>Generate GPT-based summaries + send PDF via email.</p>
-      <a href="report_ai_email.html">Try AI Email →</a>
+      <h3>🧠 AI Email Summary</h3>
+      <p>Use GPT to summarize input and email PDF output.</p>
+      <a href="report_ai_email.html">Use AI Email →</a>
     </div>
     <div class="card">
       <h3>📊 Admin Dashboard</h3>
-      <p>View approved reports + category statistics chart.</p>
+      <p>View approved logs with category chart breakdown.</p>
       <a href="report_admin_dashboard.html">Go to Admin →</a>
     </div>
     <div class="card">
-      <h3>🌐 Global Portal</h3>
-      <p>Explore global policy, fund, and opportunity data.</p>
-      <a href="global_portal.html">Visit Portal →</a>
+      <h3>🌐 Global Opportunity</h3>
+      <p>Explore policy support and grants across countries.</p>
+      <a href="global_portal.html">Explore Portal →</a>
     </div>
   </section>
 
   <script>
     function toggleTheme() {
       const html = document.documentElement;
-      const dark = html.getAttribute("data-theme") === "dark";
-      html.setAttribute("data-theme", dark ? "light" : "dark");
+      const isDark = html.getAttribute("data-theme") === "dark";
+      html.setAttribute("data-theme", isDark ? "light" : "dark");
     }
   </script>
 </body>
