--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 
 <!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"><title>AgriNexus All Portal</title></head>
+<html lang="ko"><head><meta charset="UTF-8"><title>AgriNexus Portal - Final Merge</title></head>
 <body>
-<h1>🌿 AgriNexus All Features</h1>
+<h1>🌿 AgriNexus World All Features</h1>
 <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="report_dynamic.html">📄 Regional Report</a></li>
-  <li><a href="report_ai_email.html">🧠 AI Email Summary</a></li>
-  <li><a href="report_admin_dashboard.html">📊 Admin Dashboard</a></li>
-  <li><a href="global_portal.html">🌍 Global Portal</a></li>
-  <li><a href="report_news_dynamic.html">📰 News Report + AI Summary</a></li>
+  <li><a href="report_dynamic.html">📄 지역 리포트 생성기</a></li>
+  <li><a href="report_ai_email.html">📨 AI 요약 + 이메일 전송</a></li>
+  <li><a href="report_news_editorial.html">📰 뉴스 기반 정책 사설 리포트</a></li>
+  <li><a href="report_admin_dashboard.html">📊 관리자 승인 대시보드</a></li>
 </ul>
-</body>
-</html>
+</body></html>
