--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 
 <!DOCTYPE html>
-<html lang="ko"><head><meta charset="UTF-8"><title>AgriNexus Portal - Final Merge</title></head>
+<html lang="ko">
+<head><meta charset="UTF-8"><title>AgriNexus World - 통합 메뉴 포털</title></head>
 <body>
-<h1>🌿 AgriNexus World All Features</h1>
+<h1>🌿 AgriNexus World - All Features Portal</h1>
 <ul>
-  <li><a href="report_dynamic.html">📄 지역 리포트 생성기</a></li>
-  <li><a href="report_ai_email.html">📨 AI 요약 + 이메일 전송</a></li>
-  <li><a href="report_news_editorial.html">📰 뉴스 기반 정책 사설 리포트</a></li>
+  <li><a href="index.html">🏠 메인 홈</a></li>
+  <li><a href="report_dynamic.html">📄 지역 기반 리포트 생성기</a></li>
+  <li><a href="report_ai_email.html">🧠 AI 요약 + 이메일 발송</a></li>
+  <li><a href="report_news_editorial.html">📰 뉴스 기반 정책 리포트 (GNews + OpenAI)</a></li>
   <li><a href="report_admin_dashboard.html">📊 관리자 승인 대시보드</a></li>
+  <li><a href="global_portal.html">🌐 글로벌 정책 포털</a></li>
 </ul>
-</body></html>
+</body>
+</html>
