--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="UTF-8"><title>AgriNexus World - 통합 메뉴 포털</title></head>
+<head>
+    <meta charset="UTF-8" />
+    <title>AgriNexus World - GPT 자동화 통합 포털</title>
+</head>
 <body>
-<h1>🌿 AgriNexus World - All Features Portal</h1>
-<ul>
-  <li><a href="index.html">🏠 메인 홈</a></li>
-  <li><a href="report_dynamic.html">📄 지역 기반 리포트 생성기</a></li>
-  <li><a href="report_ai_email.html">🧠 AI 요약 + 이메일 발송</a></li>
-  <li><a href="report_news_editorial.html">📰 뉴스 기반 정책 리포트 (GNews + OpenAI)</a></li>
-  <li><a href="report_admin_dashboard.html">📊 관리자 승인 대시보드</a></li>
-  <li><a href="global_portal.html">🌐 글로벌 정책 포털</a></li>
-</ul>
+    <h1>🌍 AgriNexus World</h1>
+    <ul>
+        <li><a href="/chatbot">🧠 GPT 상담봇</a></li>
+        <li><a href="/contract">📄 계약서 자동 생성</a></li>
+        <li><a href="/report">📊 보고서 요약 생성기</a></li>
+        <li><a href="/news">📰 글로벌 뉴스 요약</a></li>
+        <li><a href="/global-opportunity">🌐 국가별 전략 제안</a></li>
+        <li><a href="/ai-export">📦 수출입 문서 자동화</a></li>
+        <li><a href="/admin">🛠 관리자 대시보드</a></li>
+    </ul>
 </body>
 </html>
