--- a/chatbot.html
+++ b/chatbot.html
@@ -1,49 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>AgriNexus AI 상담봇 (보안 구조)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body { font-family: Arial; padding: 2rem; background: #fefefe; }
-    #chat { height: 300px; overflow-y: scroll; border: 1px solid #ccc; padding: 1rem; background: #f9f9f9; }
-    .user { font-weight: bold; color: #007bff; }
-    .bot { margin-left: 1rem; color: #222; }
-  </style>
-</head>
-<body>
-  <h2>🤖 AgriNexus AI 상담봇 (GPT-4 실시간 응답)</h2>
-  <div id="chat"></div>
-  <input type="text" id="input" placeholder="질문을 입력하세요..." style="width: 80%;">
-  <button onclick="sendMessage()">전송</button>
-
-<script>
-async function sendMessage() {
-  const input = document.getElementById("input");
-  const chat = document.getElementById("chat");
-  const message = input.value;
-  if (!message) return;
-
-  chat.innerHTML += `<div class='user'>🙋‍♂️ 나: ${message}</div>`;
-
-  try {
-    const response = await fetch("https://gpt-api-proxy.vercel.app/api/chat", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ prompt: message })
-    });
-
-    const data = await response.json();
-    const reply = data.reply || "❌ 오류: AI 응답 실패";
-    chat.innerHTML += `<div class='bot'>🤖 AI: ${reply}</div>`;
-  } catch (error) {
-    chat.innerHTML += `<div class='bot'>❌ 네트워크 오류 또는 응답 실패</div>`;
-  }
-
-  input.value = "";
-  chat.scrollTop = chat.scrollHeight;
-}
-</script>
-</body>
-</html>
+<h2>GPT 상담봇 (준비 중...)</h2>
