--- a/chatbot.html
+++ b/chatbot.html
@@ -1,1 +1,47 @@
-<h2>GPT 상담봇 (준비 중...)</h2>
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>GPT 상담봇</title>
+    <script src="config.js"></script>
+    <style>
+        body { font-family: sans-serif; margin: 20px; }
+        textarea, input, button { width: 100%; padding: 10px; margin-top: 10px; }
+        #response { margin-top: 20px; white-space: pre-wrap; background: #f1f1f1; padding: 10px; border-radius: 5px; }
+    </style>
+</head>
+<body>
+    <h2>🧠 GPT 상담봇</h2>
+    <textarea id="userInput" rows="4" placeholder="질문을 입력하세요..."></textarea>
+    <button onclick="sendToGPT()">답변 받기</button>
+    <div id="response"></div>
+
+    <script>
+        async function sendToGPT() {
+            const input = document.getElementById("userInput").value;
+            const resBox = document.getElementById("response");
+            resBox.innerHTML = "⏳ 답변 생성 중...";
+            
+            try {
+                const response = await fetch("https://api.openai.com/v1/chat/completions", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json",
+                        "Authorization": "Bearer " + CONFIG.OPENAI_API_KEY
+                    },
+                    body: JSON.stringify({
+                        model: "gpt-3.5-turbo",
+                        messages: [{ role: "user", content: input }],
+                        temperature: 0.7
+                    })
+                });
+                const data = await response.json();
+                resBox.innerHTML = data.choices[0].message.content;
+            } catch (e) {
+                resBox.innerHTML = "⚠️ 오류 발생: " + e.message;
+            }
+        }
+    </script>
+</body>
+</html>
