--- a/report.html
+++ b/report.html
@@ -10,6 +10,7 @@
         body { font-family: sans-serif; margin: 20px; }
         textarea, input, button { width: 100%; padding: 10px; margin-top: 10px; }
         #summary { margin-top: 20px; background: #f0f8ff; padding: 10px; white-space: pre-wrap; border-radius: 5px; }
+        .tip { color: #666; font-size: 14px; margin-top: 10px; }
     </style>
 </head>
 <body>
@@ -18,13 +19,14 @@
     <input type="email" id="email" placeholder="📩 이메일 주소 입력 (선택)">
     <button onclick="summarize()">GPT 요약 생성</button>
     <button onclick="generatePDF()">📄 PDF 저장</button>
+    <div class="tip">💡 GPT 요약 결과는 아래에 표시됩니다. 생성된 결과는 PDF로 저장할 수 있습니다.</div>
     <div id="summary"></div>
 
     <script>
         async function summarize() {
             const input = document.getElementById("reportInput").value;
             const summaryBox = document.getElementById("summary");
-            summaryBox.innerHTML = "⏳ 요약 생성 중...";
+            summaryBox.innerHTML = "⏳ GPT가 요약 중입니다. 잠시만 기다려 주세요...";
 
             try {
                 const response = await fetch("https://api.openai.com/v1/chat/completions", {
@@ -41,10 +43,21 @@
                         ]
                     })
                 });
+
+                if (!response.ok) {
+                    const err = await response.json();
+                    throw new Error(err.error?.message || "OpenAI API 오류 발생");
+                }
+
                 const data = await response.json();
-                summaryBox.innerHTML = data.choices[0].message.content;
+                summaryBox.innerHTML = "✅ 요약 완료:<br><br>" + data.choices[0].message.content;
+
             } catch (e) {
-                summaryBox.innerHTML = "⚠️ 오류 발생: " + e.message;
+                summaryBox.innerHTML = "⚠️ 오류 발생: " + e.message + "<br><br>"
+                    + "👉 <b>해결 방법 안내:</b><br>"
+                    + "- OpenAI API 키가 올바르게 설정되었는지 확인하세요.<br>"
+                    + "- 일시적인 네트워크 문제일 수 있습니다. 다시 시도해 보세요.<br>"
+                    + "- 지속될 경우 관리자에게 문의하세요.";
             }
         }
 
