--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,50 @@
-<h2>관리자 대시보드 (준비 중...)</h2>
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>AgriNexus 관리자 대시보드</title>
+    <style>
+        body { font-family: sans-serif; padding: 20px; }
+        h2 { color: #004085; }
+        table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+        th, td { padding: 10px; border: 1px solid #ccc; text-align: left; }
+        .summary { background: #f8f9fa; padding: 10px; border-radius: 8px; margin-top: 20px; }
+    </style>
+</head>
+<body>
+    <h2>🛠 AgriNexus 관리자 대시보드</h2>
+    <div class="summary">
+        <p><strong>최근 접수된 이메일:</strong> <i>(이메일 자동 전송 기능은 서버 연동 후 활성화됨)</i></p>
+        <ul>
+            <li>📄 계약서 제출 요청: admin@agrinexus.world</li>
+            <li>📊 보고서 요약 요청: insight@agrinexus.world</li>
+        </ul>
+    </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>문서 종류</th>
+                <th>파일 이름</th>
+                <th>날짜</th>
+                <th>상태</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>계약서</td>
+                <td>contract_agreement.pdf</td>
+                <td>2025-05-16</td>
+                <td>🟢 완료</td>
+            </tr>
+            <tr>
+                <td>보고서</td>
+                <td>report_summary.pdf</td>
+                <td>2025-05-16</td>
+                <td>🟢 완료</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+</html>
